# HowardM-api

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  Dockerfile  MANIFEST.ini  Makefile  Pipfile  README.md  TODO  conftest.py  consul.hcl  docker-compose.yml  gunicorn.conf.py  make_order_csv.py  projects.md  pyproject.toml  run.py  setup.py  up.py  watchdog_cli.py
slack_bot/: Dockerfile  docker-compose.yml  pyproject.toml  slack_bot.py
tests/: 000-test.csv  001-test.csv  base.py  test_app.py  test_hm_notifications_api.py  test_hm_notifications_services.py  with_user_base.py
