[tool.poetry]
name = "hm_api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
Flask = "^1.1.2"
Flask-OpenTracing = "^1.1.0"
Flask-SSE = "^1.0.0"
Flask-WTF = "^0.14.3"
SQLAlchemy = "^1.4.0b1"
aiohttp = "^3.7.3"
appdirs = "^1.4.4"
blinker = "^1.4"
boto3 = "^1.16.53"
bs4 = "^0.0.1"
bugsnag = "^4.0.2"
celery = "^5.0.5"
consulate = "^0.6.0"
dataset = "^1.4.3"
docx2pdf = "^0.1.7"
eventlet = "^0.30.0"
fs = "^2.4.11"
gevent = "^20.12.1"
google-api-python-client = "^1.12.8"
google-cloud-storage = "^1.35.0"
gspread = "^3.6.0"
gspread-dataframe = "^3.2.0"
gunicorn = "^20.0.4"
html5lib = "^1.1"
humanize = "^3.2.0"
influxdb = "^5.3.1"
jaeger-client = "^4.4.0"
lxml = "^4.6.2"
minio = "^7.0.1"
pandas = "^1.2.0"
pangres = "^2.2.3"
psycopg2-binary = "^2.8.6"
pwkit = "^1.0.0"
python = ">=3.7.1,<4.0"
python-docx = "^0.8.10"
python-dotenv = "^0.15.0"
redis = "^3.5.3"
requests = "^2.25.1"
sendgrid = "^6.4.8"
sqlalchemy-repr = "^0.0.2"
walrus = "^0.8.1"
xlrd = "1.2.0"
Flask-API = "^2.0"
Flask-CLI = "^0.4.0"
Flask-HTTPAuth = "^4.2.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Session = "^0.3.2"
Flask-Uploads = "^0.2.1"
google-cloud-pubsub = "^2.2.0"
pandas-gbq = "^0.14.1"
Werkzeug = "^1.0.1"
stringcase = "^1.2.0"
loguru = "^0.5.3"
flask-admin = {git = "https://github.com/nicksherron/flask-admin", rev = "sqlalchemy-v1.4"}
psycogreen = "^1.0.2"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
neovim = "^0.3.1"
pynvim = "^0.4.2"
jedi = "^0.18.0"
ipython = {git = "https://github.com/mskar/ipython", rev = "auto_suggest"}
isort = "^5.7.0"
pylint = "^2.6.0"
jupyterlab = "^3.0.4"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
